# manipulator_ws

./: .gitignore  README.md  extracted_inliers.pcd  extracted_outliers.pcd  frames.gv  pass_through_filtered.pcd  voxel_downsampled.pcd
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: mobile_manipulator.pc
grasp_multiObject_multiGrasp/: README.md  getGrasp.sh  points.txt
grasp_multiObject_multiGrasp/data/preprocessing/: pcdToDepth.py  rgd.py
grasp_multiObject_multiGrasp/lib/: setup.py
grasp_multiObject_multiGrasp/lib/datasets/: factory.py
grasp_multiObject_multiGrasp/lib/model/: config.py  nms_wrapper.py  train_val.py
grasp_multiObject_multiGrasp/lib/nets/: resnet_v1.py
grasp_multiObject_multiGrasp/tools/: demo_graspRGD.py  demo_graspRGD_vis_mask.py  demo_graspRGD_withFolder.py  mask_gen.py
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
install/lib/pkgconfig/: mobile_manipulator.pc  mobile_manipulator_moveit_config.pc  move_group.pc  my_dynamixel_tutorial.pc  sample_opencv_pkg.pc
install/share/sample_opencv_pkg/: package.xml
src/agile_grasp/launch/: single_camera_grasps.launch
src/gpd/launch/: .ur5_15_channels.launch.swp  grasp_detection_service.launch  tutorial0.launch  tutorial1.launch  ur5_15_channels.launch
src/gpd/scripts/: select_grasp.py
src/gpd_ros/launch/: ur5.launch
src/haf_grasping/data/: extracted_inliers.pcd  extracted_outliers.pcd  pass_through_filtered.pcd  voxel_downsampled.pcd
src/haf_grasping/launch/: haf_grasping_all.launch
src/haf_grasping/libsvm-3.12/: svm-predict  svm-scale  svm-train
src/mobile_manipulator/: CMakeLists.txt  package.xml  urdf.rviz
src/mobile_manipulator/launch/: view_test.launch  view_test5dof.launch  view_test_tf.rviz
src/mobile_manipulator/meshes/: AX-12_18A - dynamixel_AXseries-1.stl  F10.stl  FR05-H101K.STL  Readme.txt  axback.stl  axbracket.stl  base_dyna.stl  base_link.STL  base_motor.STL  base_und.stl  cube.STL  dynamixel_x64series.STL  dynamixel_x64series.stl  elbow_pitch.STL  gripper.stl  gripper_Centering.stl  gripper_wheel.STL  mx-64.stl  new_elbow_pitch2.STL  new_wrist_roll.STL  shoulder_pitch.STL  shoulder_yaw.STL  shoulder_yaw1.STL  shoulder_yaw_plus.STL  square_plate.stl  wrist_pitch.STL  wrist_roll.STL  wrist_yaw.STL  wrist_yaw_brak.STL
src/mobile_manipulator/model/: DoubleMotorBase.stl  DoubleMotorUpper.stl  ikfast61_arm.cpp  mobile_manipulator.urdf  mobile_manipulator.xacro  mobile_manipulator.xml  mobile_manipulator5dof.urdf  mobile_manipulator5dof.xacro  mobile_manipulator6.urdf  mobile_manipulator_sw.urdf  mobile_manipulatornoJplate.xacro  mobile_manipulatornojplate.urdf  test.urdf  testing.urdf  urdf.rviz
src/mobile_manipulator_ikfast_arm_plugin/: CMakeLists.txt  mobile_manipulator_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/mobile_manipulator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/move_group/: CMakeLists.txt  package.xml
src/move_group/msg/: array.msg
src/move_group/scripts/: cartesian.py  forwd_kin.py  frames.gv  get_angle_values.py  get_angles.py  go_to_point.py  grasp.py  grasp_pose_sub.py  gripper.py  home.py  inverse_kin.py  pose_goal.py  pose_sub.py  pose_sub_with_objectbroadcast.py
src/move_group/src/: add_collision_object.cpp  attach_detach_object.cpp  cartesian.cpp  check_collision.cpp  home.cpp  pick_place.cpp  pose_sub.cpp  remove_collision_object.cpp  robot_model.cpp
src/move_group/srv/: c_g.srv
src/my_dynamixel_tutorial/: joints_trajectory_controller.yaml  package.xml  tilt.yaml
src/pcl_ros_cluster_segmentation/: CMakeLists.txt  package.xml
src/perception/: CMakeLists.txt  package.xml
(+104 files in other folders)
